Adding generic pointers