@@ -7,11 +7,11 @@
     <parent>
         <groupId>JPassport</groupId>
         <artifactId>JPassport-parent</artifactId>
-        <version>0.6.0</version>
+        <version>0.6.0-19</version>
     </parent>
 
     <artifactId>JPassport-main</artifactId>
-    <version>0.6.0</version>
+    <version>0.6.0-19</version>
 
 <!--    <name>JPassport</name>-->
     <packaging>jar</packaging>
@@ -38,6 +38,17 @@
 
             </plugins>
         </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>19</source>
+                    <target>19</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 
 </project>
